# aoc

./: .gitignore  flake.nix  inputs.py
cpp20/: CMakeLists.txt  build.sh  callgrind.out.20735  default.nix  flake.nix
cpp20/include/: day.h  day1.h  day10.h  day11.h  day12.h  day13.h  day14.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  days.h  file_util.h
cpp20/src/: CMakeLists.txt  aoc.cpp  day.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  days.cpp  file_util.cpp
odin23/: default.nix  flake.nix  ols.json
odin23/aoc/: aoc.odin  benchmark.odin  day.odin  day01.odin  day02.odin  day03.odin  day04.odin  day05.odin  day06.odin  day07.odin  day08.odin  day09.odin  day10.odin  day11.odin  day12.odin  day13.odin  day14.odin  day15.odin  day16.odin  day17.odin  day18.odin  day19.odin  day20.odin  day21.odin  day22.odin  util.odin
python22/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19a.py  19b.py  20.py  21.py  22a.py  22b.py  23.py  24.py  25.py
util/: inputs.py
